# cmdb-sdk-python

./: .gitignore  README.md  README_cn.md  pyproject.toml
exmaples/: ci.py  cr.py
src/cmdb/: __init__.py  client.py
src/cmdb/core/: auth.py  ci.py  ci_relations.py  exc.py  models.py  policy.py
tests/: test_ci.py  test_cr.py
