[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veops_cmdb"
description = "sdk for veops cmdb"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = ["requests"]
dynamic = ["version"]


[tool.setuptools.dynamic]
version = { attr = "cmdb.__version__" }


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"
